fix alignment and invitation place

--- a/css/style.css
+++ b/css/style.css
@@ -687,6 +687,8 @@ a {
 	display: grid;
 	grid-template-columns: repeat(5, auto);
 	margin: 20px 0;
+	align-items: center;
+
   }
   .wrapper section .item {
 	/* width: max-content; */
